--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -1,5 +1,5 @@
 p {
-    margin-left: 50%;
+    margin-left: 0%;
     width: 100%;
     animation-duration: 3s;
     animation-name: slidein;
@@ -8,11 +8,19 @@ p {
   @keyframes slidein {
     from {
       margin-left: 100%;
-      width: 50%;
-    }
-  
-    to {
-      margin-left: 50%;
       width: 100%;
     }
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
+
+  .background {
+    margin: 0;
+    padding: 50px;
+    width: 100vw;
+    height: 100vh;
+    background-color: #383838;
+    color: #fff;
   }
